--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,457 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>НАМУ</title>
+    <link rel="stylesheet" href="./styles/style.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="icon" href="./images/nav/nav-logo.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body">
+
+    <header class="header">
+
+      <div class="container">
+        <nav class="nav">
+          <div class="nav__left">
+            <a href="#menu" class="icon icon__menu"></a>
+          </div>
+
+          <div class="nav__center">
+            <a href="#" class="nav__logo-link">
+              <img
+                src="./images/nav/nav-logo.svg"
+                alt="logo"
+                class="nav__logo"
+              >
+            </a>
+          </div>
+
+          <div class="nav__right">
+            <a href="#" class="icon icon__menu"></a>
+          </div>
+        </nav>
+      </div>
+
+      <div class="container">
+        <div class="header__grid-block">
+          <div class="header__block">
+            <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+            <div class="header__button-block">
+              <div class="header__button">
+                <div class="header__button-text">КВИТКИ</div>
+                <div class="header__button-click">
+                  <a href="#" class="header__button-link"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container__header">
+        <div class="header__image"></div>
+      </div>
+
+    </header>
+
+    <aside id="menu" class="menu page__menu">
+
+      <div class="menu__top">
+        <div class="container menu__container">
+          <section class="menu__naviblock">
+            <a href="#" class="icon menu__close"></a>
+            <div class="menu__navi navi">
+              <div class="navi__block1 navi__nblock">
+                <a href="#galary" class="navi__link menu__link">Галерея</a>
+              </div>
+              <div class="navi__block2 navi__nblock">
+                <a href="#aboutUs" class="navi__link menu__link">Про Нас</a>
+              </div>
+              <div class="navi__block3 navi__nblock">
+                <a href="#events" class="navi__link menu__link">Виставки та події</a>
+              </div>
+              <div class="navi__block4 navi__nblock">
+                <a href="#contacts" class="navi__link menu__link">Контакти</a>
+              </div>
+            </div>
+            <div class="menu__line"></div>
+          </section>
+
+          <section class="menu__text text">
+            <div class="text__block1 menu__block1">
+              <h4 class="text__block1--title">Графік роботи</h4>
+              <div class="menu__block--text">
+                <div class="menu__block1--t">
+                  <p class=
+                    "
+                      text__block1--text
+                      menu__block1--text1
+                    "
+                  >
+                    <span class="page__bold">12:00 — 20:00</span> середа<br>
+                    <span class="page__bold">12:00 — 20:00</span> четвер<br>
+                    <span class="page__bold">12:00 — 20:00</span> п’ятниця<br>
+                    <span class="page__bold">11:00 — 19:00</span> субота<br>
+                    <span class="page__bold">11:00 — 19:00</span> неділя<br>
+                  </p>
+                </div>
+
+                <p class=
+                  "
+                    text__block1--text
+                    menu__block1--text2
+                  "
+                >
+                  <span class="page__bold">Вихідні:</span> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину<br>
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <div class="menu__shadow">1</div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="main__current-events current-events"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="current-events__title">Актуальні події</h2>
+
+          <article class="
+            current-events__events
+            events"
+          >
+            <div class="events__blockl">
+              <img
+                src="./images/main/img/event-1.png"
+                alt="event-img"
+                class="events__img"
+              >
+            </div>
+
+            <div class="events__blockr">
+              <div class="events__block">
+                <p class="events__info">ВИСТАВКА</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+              <div class="events__title-block">
+                <h3 class="events__title">Йду і повертаюсь</h3>
+                <div class="events__square"></div>
+              </div>
+              <p class="events__text">
+                Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="
+            current-events__events
+            events"
+          >
+            <div class="events__blockl">
+              <img
+                src="./images/main/img/event-2.png"
+                alt="event-img"
+                class="events__img"
+              >
+            </div>
+
+            <div class="events__blockr">
+              <div class="events__block">
+                <p class="events__info">ВИСТАВКА</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="events__title-block">
+                <h3 class="events__title">І спогади і мрії</h3>
+                <div class="events__square"></div>
+              </div>
+
+              <p class="events__text">
+                Національний художній музей України до 100 річчя
+                від дня народження   видатної української художниці
+                Тетяни Яблонської  відкриває ретроспективну ювілейну
+                виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="main__from-c-to-r from-c-to-r">
+        <div class="from-c-to-r__img">
+          <div class="container">
+            <div class="from-c-to-r__content-position">
+              <div class="from-c-to-r__content">
+                <div class="from-c-to-r__block">
+                  <p class="from-c-to-r__info">ЛЕКЦІЯ</p>
+                  <p class="from-c-to-r__date">26/08/2019 - 11:00</p>
+                </div>
+                <h2 class="from-c-to-r__title">Від класицизму до романтизму</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="main__galary galary"
+        id="galary"
+      >
+        <div class="container">
+          <h1 class="galary__title">Галерея</h1>
+
+          <div class="galary__slider">
+            <div class="slider__img-container img-container">
+              <input
+                type="radio"
+                id="r1"
+                name="r"
+                checked
+              >
+              <input
+                type="radio"
+                id="r2"
+                name="r"
+              >
+              <input
+                type="radio"
+                id="r3"
+                name="r"
+              >
+              <input
+                type="radio"
+                id="r4"
+                name="r"
+              >
+
+              <div class="img-container__painting s1 img">
+                <img
+                  src="./images/main/galary/img_1.png"
+                  alt="paint1"
+                >
+              </div>
+              <div class="img-container__painting">
+                <img
+                  src="./images/main/galary/img_2.png"
+                  alt="paint2"
+                >
+              </div>
+              <div class="img-container__painting">
+                <img
+                  src="./images/main/galary/img_1.png"
+                  alt="paint3"
+                >
+              </div>
+              <div class="img-container__painting">
+                <img
+                  src="./images/main/galary/img_2.png"
+                  alt="paint4"
+                >
+              </div>
+            </div>
+
+            <div class="slider__buttons buttons">
+              <label for="r1" class="buttons__btn"></label>
+              <label for="r2" class="buttons__btn"></label>
+              <label for="r3" class="buttons__btn"></label>
+              <label for="r4" class="buttons__btn"></label>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="galary__exhibition">
+            <div class="galary__exhibition--block galary__exhibition--block1"></div>
+            <div class="galary__exhibition--block galary__exhibition--block2"></div>
+            <div class="galary__exhibition--block galary__exhibition--block3"></div>
+            <div class="galary__exhibition--block galary__exhibition--block4"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="main__follow follow"
+        id="aboutUs"
+      >
+        <div class="container">
+          <h1 class="follow__title">Підписка</h1>
+          <p class="follow__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <form
+            class="follow__button"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              class="follow__button--email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button class="follow__button--btn">
+              <img
+                src="./images/main/img/arrow.png"
+                alt="arrow"
+                class="follow__button--img"
+              >
+            </button>
+          </form>
+
+        </div>
+      </section>
+    </main>
+
+    <div class="container">
+      <footer
+        class="footer"
+        id="contacts"
+      >
+        <section class="footer__icons icons">
+          <a
+            href="#"
+            class="footer__link"
+          >
+            <h1 class="icons__title"> NA<br>MU</h1>
+          </a>
+          <div class="icons__block">
+            <a
+              href="https://www.facebook.com/?locale=uk_UA"
+              class="icons__link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/facebook.svg"
+                alt="icon-facebook"
+                class="icons__block--facebook"
+              >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              class="icons__link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/instagram.svg"
+                alt="icon-instagram"
+                class="icons__block--instagram"
+              >
+            </a>
+          </div>
+        </section>
+
+        <section class="footer__text text">
+          <div class="text__block1">
+            <h4 class="text__block1--title">Графік роботи</h4>
+            <p class="text__block1--text">
+              <span class="page__bold">12:00 — 20:00</span> середа<br>
+              <span class="page__bold">12:00 — 20:00</span> четвер<br>
+              <span class="page__bold">12:00 — 20:00</span> п’ятниця<br>
+              <span class="page__bold">11:00 — 19:00</span> субота<br>
+              <span class="page__bold">11:00 — 19:00</span> неділя<br>
+              <br>
+              <span class="page__bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+          <div class="text__block2">
+            <h4 class="text__block2--title">Контакти:</h4>
+            <p class="text__block2--text">
+              <a
+                href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%9
+                6%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%
+                D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0
+                %B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4460065,30.5
+                079868,15z/data=!4m10!1m2!2m1!1z0LLRg9C7LiDQnC4g0JPRgNGD0YjQtdC
+                y0YHRjNC60L7Qs9C-LCA2OyDQmtC40ZfQsiwgMDE!3m6!1s0x40d4ce52445304
+                8d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!15sCjXQstGD
+                0LsuINCcLiDQk9GA0YPRiNC10LLRgdGM0LrQvtCz0L4sIDY7INCa0LjRl9CyLCA
+                wMVoyIjDQstGD0Lsg0Lwg0LPRgNGD0YjQtdCy0YHRjNC60L7Qs9C-IDYg0LrQuN
+                GX0LIgMDGSAQphcnRfbXVzZXVtmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVU50T
+                FhGbVVtRkJFQUXgAQA!16s%2Fm%2F02prqms?hl=uk-UK&entry=ttu"
+                class="text__block2--link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01
+              </a><br>
+
+              <a
+                href="tel:0442781357"
+                class="text__block2--link"
+              >
+                тел. +38 (044) 278-13-57
+              </a><br>
+
+              <a
+                href="tel:0442787454"
+                class="text__block2--link"
+              >
+                факс +38 (044) 278-74-54
+              </a><br>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="text__block2--link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a><br>
+
+            </p>
+            <div class="text__block2--figure">
+              <a href="#">
+                <div class="text__block2--elipse">
+                  <img
+                    src="./images/footer/arrow-up.svg"
+                    alt="arrow"
+                    class="text-block2--arrow"
+                  >
+                </div>
+              </a>
+            </div>
+          </div>
+        </section>
+
+        <div class="footer__line"></div>
+
+        <section class="footer__navi navi">
+          <div class="navi__block1 navi__nblock">
+            <a href="#galary" class="navi__link">Галерея</a>
+          </div>
+          <div class="navi__block2 navi__nblock">
+            <a href="#aboutUs" class="navi__link">Про Нас</a>
+          </div>
+          <div class="navi__block3 navi__nblock">
+            <a href="#events" class="navi__link">Виставки та події</a>
+          </div>
+          <div class="navi__block4 navi__nblock">
+            <a href="#contacts" class="navi__link">Контакти</a>
+          </div>
+        </section>
+
+        <section class="footer__info info">
+          <p class="info__text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="info__text">Designed by Zhyriada Marina</p>
+        </section>
+      </footer>
+    </div>
+
   </body>
 </html>
