--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,369 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      type="image/x-icon"
+      href="./images/icons/NA-MU-favicon.ico"
+      rel="shortcut icon"
+    >
+
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body">
+    <header class="header body__header">
+      <div class="header__container">
+        <div class="header__top">
+          <div class="top-bar">
+            <a href="#aside" class="top-bar__menu-icon icon"></a>
+            <a href="#" class="top-bar__logo-link">
+              <img
+                src="./images/icons/NA-MU.svg"
+                alt="logo"
+                class="top-bar__logo"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="header__bottomn">
+          <div class="header__img"></div>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__tickets">
+            <a href="#" class="tikets">
+              <span class="tikets__text">КВИТКИ</span>
+              <div class="tikets__button button button--grean"></div>
+            </a>
+          </div>
+          <div class="header__events">
+            <span>ПОДІЇ</span>
+          </div>
+
+        </div>
+      </div>
+    </header>
+
+    <aside class="body__aside aside" id="aside">
+      <div class="aside__wrapper">
+        <div class="aside__container">
+          <div class="aside__top">
+            <a href="#" class="aside__icon icon"></a>
+
+            <nav class="aside__nav nav-aside">
+              <ul class="nav-aside__list">
+                <li class="nav-aside__item">
+                  <a href="#gallery" class="nav-aside__link">Галерея</a>
+                </li>
+                <li class="nav-aside__item">
+                  <a href="#" class="nav-aside__link">Про Нас</a>
+                </li>
+                <li class="nav-aside__item">
+                  <a href="#current-events" class="nav-aside__link">Виставки та події</a>
+                </li>
+                <li class="nav-aside__item">
+                  <a href="#contacts" class="nav-aside__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="aside__line"></div>
+
+          <div class="aside__bottom">
+
+            <div class="aside__schedule schedule schedule--asid">
+              <h4 class="schedule__title">Графік роботи</h4>
+
+              <ul class="schedule__list schedule__list--asid">
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">середа</span>
+                </li>
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">четвер</span>
+                </li>
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">п’ятниця</span>
+                </li>
+                <li class="schedule__item">
+                  11:00 — 19:00 <span class="schedule__text">субота</span>
+                </li>
+                <li class="schedule__item">
+                  11:00 — 19:00 <span class="schedule__text">неділя</span>
+                </li>
+              </ul>
+
+              <p class="schedule__atantion schedule__atantion--asid">
+                Вихідні: <span class="schedule__text">понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</span>
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <a href="#" class="aside__close"></a>
+    </aside>
+
+    <main class="main body__main">
+      <section class="main__section current-events" id="current-events">
+        <div class="current-events__container">
+          <h1 class="section-titile">Актуальні події</h1>
+
+          <article class="current-events__card">
+            <img
+              class="current-events__img"
+              src="./images/current-events-1.png"
+              alt="Йду і повертаюсь картина"
+            >
+            <div class="current-events__text">
+              <div class="current-events__info current-events__info--pos">
+                <h4 class="current-events__exhibition">ВИСТАВКА</h4>
+                <span class="current-events__exhibition-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="current-events__title current-events__title--pos">Йду і повертаюсь</h3>
+              <p class="current-events__description current-events__description--pos">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="current-events__card">
+            <img
+              class="current-events__img"
+              src="./images/current-events-2.png"
+              alt="І спогади і мрії картина"
+            >
+            <div class="current-events__text">
+              <div class="current-events__info current-events__info--pos">
+                <h4 class="current-events__exhibition">ВИСТАВКА</h4>
+                <span class="current-events__exhibition-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="current-events__title current-events__title--pos">І спогади і мрії</h3>
+              <p class="current-events__description current-events__description--pos">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+
+        </div>
+
+        <article class="current-events__lecture">
+          <img
+            class="current-events__lecture-img"
+            src="./images/current-events-3.png"
+            alt="Від класицизму до романтизму картина"
+          >
+          <div class="current-events__container">
+            <div class="current-events__desk">
+              <div class="current-events__info current-events__info--lecture">
+                <h4 class="current-events__exhibition">ЛЕКЦІЯ</h4>
+                <span class="current-events__exhibition-date">26/08/2019 - 11:00</span>
+              </div>
+              <h2 class="current-events__title current-events__title--lecture">Від класицизму до романтизму</h2>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section class="main__section gallery" id="gallery">
+        <h1 class="section-titile gallery__title">Галерея</h1>
+
+        <div class="gallery__slider slider">
+          <input
+            class="slider__input slider__input--1"
+            type="radio"
+            name="point"
+            id="slide-1"
+            data-scroll="0"
+            checked
+          >
+          <input
+            class="slider__input slider__input--2"
+            type="radio"
+            name="point"
+            id="slide-2"
+            data-scroll="25"
+          >
+          <input
+            class="slider__input slider__input--3"
+            type="radio"
+            name="point"
+            id="slide-3"
+            data-scroll="50"
+          >
+          <input
+            class="slider__input slider__input--4"
+            type="radio"
+            name="point"
+            id="slide-4"
+            data-scroll="75"
+          >
+
+          <div class="slider__controls">
+            <label class="slider__label slider__label--1" for="slide-1"></label>
+            <label class="slider__label slider__label--2" for="slide-2"></label>
+            <label class="slider__label slider__label--3" for="slide-3"></label>
+            <label class="slider__label slider__label--4" for="slide-4"></label>
+          </div>
+
+          <div class="slider__content">
+            <div class="slider__slides">
+              <img
+                src="./images/galery/1.png"
+                alt="slide img"
+                class="slider__slide slider__slide--1 slider__slide--narrow"
+                data-scroll="0"
+              >
+              <img
+                src="./images/galery/2.png"
+                alt="slide img"
+                class="slider__slide slider__slide--2 slider__slide--wide"
+                data-scroll="0"
+              >
+              <img
+                src="./images/galery/3.png"
+                alt="slide img"
+                class="slider__slide slider__slide--3 slider__slide--wide"
+                data-scroll="0"
+              >
+              <img
+                src="./images/galery/4.png"
+                alt="slide img"
+                class="slider__slide slider__slide--4 slider__slide--narrow"
+                data-scroll="0"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__section subscription">
+        <div class="subscription__conteiner">
+          <div class="subscription__text">
+            <h1 class="section-titile section-titile--centr subscription__title">Підписка</h1>
+            <p class="subscription__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+
+          <form
+            action="#"
+            class="subscription__form form"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              class="form__input"
+              type="email"
+              placeholder="E-mail"
+              name="email"
+              required
+            >
+
+            <button class="form__button button button--orange"></button>
+          </form>
+        </div>
+
+      </section>
+    </main>
+
+    <footer class="footer body__footer" id="contacts">
+      <div class="footer__container">
+        <div class="footer__logo-bar footer__logo-bar--pos">
+          <a href="#" class="footer__logo">
+            <img src="./images/icons/NA-MU.svg" alt="logo">
+          </a>
+
+          <div class="footer__social-media">
+            <a href="#" class="footer__media footer__media--fb icon"></a>
+            <a href="#" class="footer__media footer__media--inst icon"></a>
+          </div>
+        </div>
+
+        <div class="footer__schedule schedule schedule--footer">
+          <h4 class="schedule__title">Графік роботи</h4>
+
+          <ul class="schedule__list schedule__list--footer">
+            <li class="schedule__item">
+              12:00 — 20:00 <span class="schedule__text">середа</span>
+            </li>
+            <li class="schedule__item">
+              12:00 — 20:00 <span class="schedule__text">четвер</span>
+            </li>
+            <li class="schedule__item">
+              12:00 — 20:00 <span class="schedule__text">п’ятниця</span>
+            </li>
+            <li class="schedule__item">
+              11:00 — 19:00 <span class="schedule__text">субота</span>
+            </li>
+            <li class="schedule__item">
+              11:00 — 19:00 <span class="schedule__text">неділя</span>
+            </li>
+          </ul>
+
+          <p class="schedule__atantion schedule__atantion--footer">
+            <span class="schedule__text">Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</span>
+          </p>
+        </div>
+
+        <div class="footer__contacts contacts">
+          <h4 class="contacts__title">Контакти:</h4>
+
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a href="#" class="contacts__link">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a href="#" class="contacts__link">
+                тел. +38 (044) 278-13-57
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a href="#" class="contacts__link">
+                факс +38 (044) 278-74-54
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a href="#" class="contacts__link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <a href="#" class="footer__up footer__up--pos"></a>
+
+        <div class="footer__line footer__line--pos"></div>
+
+        <nav class="footer__nav footer__nav--pos nav-footer">
+          <ul class="nav-footer__list">
+            <li class="nav-footer__item">
+              <a href="#gallery" class="nav-footer__link">Галерея</a>
+            </li>
+            <li class="nav-footer__item">
+              <a href="#" class="nav-footer__link">Про Нас</a>
+            </li>
+            <li class="nav-footer__item">
+              <a href="#current-events" class="nav-footer__link">Виставки та події</a>
+            </li>
+            <li class="nav-footer__item">
+              <a href="#contacts" class="nav-footer__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__service-data">
+          <span>Designed by Zhyriada Marina</span>
+          <span>Copyright © 2019. All Rights Reserved.</span>
+        </div>
+
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
