--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Museum</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon-green.jpg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +23,7 @@
     <link rel="stylesheet" href="./styles/main.scss" />
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__content">
         <div class="header__top">
           <a href="#menu" class="header__icon icon icon--menu"></a>
@@ -34,11 +36,10 @@
         <div class="header__block">
 
           <div class="container">
-            <a href="#menu" class="header__icon--block icon icon--menu"></a>
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-            <a class="header__link" href="#">КВИТКИ</a>
+            <a class="header__link" href="#actuell">КВИТКИ</a>
           </div>
-          <a class="header__event" href="#">ПОДІЇ</a>
+          <a class="header__event" href="#actuell">ПОДІЇ</a>
         </div>
 
       </div>
@@ -46,22 +47,23 @@
 
     <aside class="page__menu menu" id="menu">
       <div class="container menu__content">
+        <a class="menu__icon icon icon--close" href="#"></a>
         <nav class="menu__nav nav">
-          <a class="menu__icon icon icon--close" href="#"></a>
+
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="">Галерея</a>
+              <a class="nav__link" href="#gallery">Галерея</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="">Виставки та події</a>
+              <a class="nav__link" href="#actuell">Виставки та події</a>
             </li>
           </ul>
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="">Про Нас</a>
+              <a class="nav__link" href="#header">Про Нас</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="">Контакти</a>
+              <a class="nav__link" href="#footer">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -91,7 +93,7 @@
 
     <main>
 
-    <section class="actuell">
+    <section class="actuell" id="actuell">
       <div class="container">
         <h2 class="actuell__title--main">Актуальні події</h2>
         <div class="actuell__block">
@@ -103,7 +105,7 @@
             </div>
             <div class="actuell__exgibition">
               <h3 class="actuell__title">Йду і повертаюсь</h3>
-              <a href="#" class="actuell__link"></a>
+              <a href="#actuell" class="actuell__link"></a>
             </div>
             <p class="actuell__text">
               Національний Художній Музей України презентує унікальну частину
@@ -124,7 +126,7 @@
 
             <div class="actuell__exgibition">
               <h3 class="actuell__title">І спогади і мрії</h3>
-              <a href="#" class="actuell__link"></a>
+              <a href="#actuell" class="actuell__link"></a>
             </div>
 
             <p class="actuell__text">
@@ -139,6 +141,7 @@
         <img class="actuell__picture" src="./images/sky-img.jpg" alt="Sky" />
 
         <div class="actuell__sky">
+
           <div class="actuell__temp--min">
             <span class="actuell__span">ЛЕКЦІЯ</span>
             <p class="actuell__part">26/08/2019 - 11:00</p>
@@ -151,11 +154,10 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div class="container">
 
         <h2 class="gallery__title">Галерея</h2>
-         <!-- <div class="gallery__content"> -->
         <div class="gallery__block pictures">
         <a class="gallery__link pictures__item--small" href="">
           <img class="gallery__picture pictures__img" src="./images/gallery/picture1.jpg" alt="Gallery picture">
@@ -172,11 +174,11 @@
           <img class="gallery__picture pictures__img" src="./images/gallery/picture4.jpg" alt="Gallery picture">
         </a>
       </div>
-      <!-- </div> -->
+   
 </div>
     </section>
 
-    <section class="subscribe">
+    <section class="subscribe" id="subscribe">
       <div class="container">
 
       <h2 class="subscribe__title">Підписка</h2>
@@ -198,7 +200,7 @@
 
   </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
 
         <div class="footer__grid">
@@ -211,13 +213,13 @@
       <ul class="footer__list">
         <li class="footer__item">
           <a class="footer__link--facebook icon"
-          href="https://www.facebook.com/"
+          href="https://www.facebook.com/namu.museum/"
           target="_blank">
           </a>
         </li>
         <li class="footer__item">
           <a class="footer__link--insta icon"
-          href="https://www.instagram.com/"
+          href="https://www.facebook.com/namu.museum/"
           target="_blank">
           </a>
         </li>
@@ -257,23 +259,24 @@
     </div>
 
 
+    <a href="#header" class="footer__round"></a>
       <span class="footer__line"></span>
 
 
         <ul class="footer__list--1">
           <li>
-            <a class="footer__link--1"  href="">Галерея</a>
+            <a class="footer__link--1"  href="#gallery">Галерея</a>
           </li>
           <li >
-            <a class="footer__link--1"  href="">Виставки та події</a>
+            <a class="footer__link--1"  href="#actuell">Виставки та події</a>
           </li>
         </ul>
         <ul class="footer__list--2">
           <li >
-            <a class="footer__link--1"  href="">Про Нас</a>
+            <a class="footer__link--1"  href="#header">Про Нас</a>
           </li>
           <li >
-            <a class="footer__link--1"  href="">Контакти</a>
+            <a class="footer__link--1"  href="#footer">Контакти</a>
           </li>
         </ul>
 
